<resources>
    <string name="app_name">Just IPTV</string>

    <string name="title_input">Input</string>
    <string name="title_channels">Channels</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_settings">Settings</string>
    <string name="title_player">Player</string>

    <string name="enter_url">Enter valid Iptv URL</string>
    <string name="title_activity_compose">My Compose App</string>
</resources>